; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/gatt/extr_gatt_utils.c_gatt_send_error_rsp.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/gatt/extr_gatt_utils.c_gatt_send_error_rsp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i8*, i8* }

@GATT_RSP_ERROR = common dso_local global i32 0, align 4
@GATT_INSUF_RESOURCE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @gatt_send_error_rsp(i32* %0, i8* %1, i8* %2, i32 %3, i64 %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i64, align 8
  %11 = alloca %struct.TYPE_2__, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32*, align 8
  store i32* %0, i32** %6, align 8
  store i8* %1, i8** %7, align 8
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  store i64 %4, i64* %10, align 8
  %14 = load i8*, i8** %8, align 8
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 2
  store i8* %14, i8** %15, align 8
  %16 = load i8*, i8** %7, align 8
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 1
  store i8* %16, i8** %17, align 8
  %18 = load i32, i32* %9, align 4
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  store i32 %18, i32* %19, align 8
  %20 = load i32*, i32** %6, align 8
  %21 = load i32, i32* @GATT_RSP_ERROR, align 4
  %22 = bitcast %struct.TYPE_2__* %11 to i32*
  %23 = call i32* @attp_build_sr_msg(i32* %20, i32 %21, i32* %22)
  store i32* %23, i32** %13, align 8
  %24 = icmp ne i32* %23, null
  br i1 %24, label %25, label %29

25:                                               ; preds = %5
  %26 = load i32*, i32** %6, align 8
  %27 = load i32*, i32** %13, align 8
  %28 = call i32 @attp_send_sr_msg(i32* %26, i32* %27)
  store i32 %28, i32* %12, align 4
  br label %31

29:                                               ; preds = %5
  %30 = load i32, i32* @GATT_INSUF_RESOURCE, align 4
  store i32 %30, i32* %12, align 4
  br label %31

31:                                               ; preds = %29, %25
  %32 = load i64, i64* %10, align 8
  %33 = icmp ne i64 %32, 0
  br i1 %33, label %34, label %37

34:                                               ; preds = %31
  %35 = load i32*, i32** %6, align 8
  %36 = call i32 @gatt_dequeue_sr_cmd(i32* %35)
  br label %37

37:                                               ; preds = %34, %31
  %38 = load i32, i32* %12, align 4
  ret i32 %38
}

declare dso_local i32* @attp_build_sr_msg(i32*, i32, i32*) #1

declare dso_local i32 @attp_send_sr_msg(i32*, i32*) #1

declare dso_local i32 @gatt_dequeue_sr_cmd(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
